2022-08-15  Charlie Keaney  <charlie.keaney@embecosm.com>

	* gcc.target/riscv/zc-zca-arch.c: New test for march args
	being passed from compiler to assembler.
	* gcc.target/riscv/zc-zcb-arch.c: Likewise.
	* gcc.target/riscv/zc-zcb-m-arch.c: Likewise.
	* gcc.target/riscv/zc-zcb-zba-arch.c: Likewise.
	* gcc.target/riscv/zc-zcf-arch.c: Likewise.
	* gcc.target/riscv/zc-zcb-zbb-arch.c: Likewise.
	* gcc.target/riscv/zc-zcmb-arch.c: Likewise.
	* gcc.target/riscv/zc-zcmp-arch.c: Likewise.
	* gcc.target/riscv/zc-zcmpe-arch.c: Likewise.
	* gcc.target/riscv/zc-zcmt-arch.c: Likewise.

2022-04-21  Segher Boessenkool  <segher@kernel.crashing.org>

	PR target/103197
	PR target/102146
	* gcc.target/powerpc/bswap-brw.c: Add xfail on scan-assembler for -m32.

2022-04-21  Segher Boessenkool  <segher@kernel.crashing.org>

	* lib/target-supports.exp (check_effective_target_has_arch_ppc64): New.

2022-04-21  Marek Polacek  <polacek@redhat.com>

	PR c++/105321
	* g++.dg/cpp0x/constexpr-105321.C: New test.

2022-04-21  Fritz Reese  <foreese@gcc.gnu.org>

	PR fortran/105310
	* gfortran.dg/dec_union_12.f90: New test.

2022-04-21  Jakub Jelinek  <jakub@redhat.com>

	PR debug/105203
	* gfortran.dg/g77/pr105203.f: New test.

2022-04-20  Ed Catmur  <ed@catmur.uk>

	PR c++/104996
	* g++.dg/cpp0x/initlist129.C: New test.

2022-04-20  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/105312
	* gcc.target/arm/pr105312.c: New testcase.

2022-04-20  Jan Hubicka  <hubicka@ucw.cz>

	* gcc.c-torture/compile/103818.c: New test.

2022-04-20  Jakub Jelinek  <jakub@redhat.com>

	PR ipa/105306
	* g++.dg/opt/pr105306.C: New test.

2022-04-19  Jakub Jelinek  <jakub@redhat.com>

	PR target/105257
	* gcc.dg/pr105257.c: New test.

2022-04-19  Jakub Jelinek  <jakub@redhat.com>

	PR c++/105256
	* g++.dg/cpp0x/pr105256.C: New test.

2022-04-19  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/104010
	PR tree-optimization/103941
	* gcc.target/i386/pr103941-1.c: New testcase.